# TP5_Skinning

./: .gitignore  CMakeLists.txt  README.md
CMake/: Project_Config.h.in
shader/: shader_skinning.frag  shader_skinning.vert  shader_weight.frag  shader_weight.vert
src/lib/mesh/: mesh_io.cpp  mesh_io.hpp
src/lib/opengl/: axes_helper.cpp  glutils.cpp  glutils.hpp
src/local/interface/: mainwindow.ui  myWidgetGL.cpp  myWidgetGL.hpp  myWindow.cpp  myWindow.hpp
src/local/scene/: scene.cpp  scene.hpp
src/skinning/: mesh_skinned.cpp  mesh_skinned.hpp  skeleton_animation.cpp  skeleton_geometry.cpp  skeleton_geometry.hpp  skeleton_joint.cpp  skeleton_joint.hpp  skeleton_parent_id.cpp  skeleton_parent_id.hpp  vertex_weight_parameter.hpp
